--- a/celtic_couple_blog/home/templates/home/home_page.html
+++ b/celtic_couple_blog/home/templates/home/home_page.html
@@ -7,25 +7,102 @@
 {% block meta_keywords %}Celtic, Travel, Blog, Heritage, Culture{% endblock %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/home.css' %}">
+
 {% endblock extra_css %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}">
 <!-- Hero Banner -->
 <section id="hero-banner" class="text-center text-white">
-    <div class="container d-flex-column justify-content-center align-items-center">
+    <div class="container d-flex flex-column justify-content-center align-items-center h-100">
         <h1 class="display-4 text-center">Adventure Awaits</h1>
         <p class="lead">Join us as we explore the world and celebrate our Celtic heritage.</p>
         <a href="{% url 'blog_list' %}" class="btn btn-primary">Read Our Blog</a>
     </div>
 </section>
 
-<!-- Introduction Section -->
-<section id="introduction" class="py-5">
+<!-- Intro Sections -->
+<section id="intros" class="py-5">
     <div class="container">
-        <h2>About Us</h2>
-        <img src="" alt="Celtic Couple" class="home-image mb-4">
-        <p>Welcome to our travel blog where we celebrate Celtic heritage, culture, and adventures. Join us as we explore beautiful destinations and share our stories.</p>
+        <div class="row">
+
+            <!-- About Us -->
+            <div class="col-md-6 mb-4">
+                <div class="intro-card">
+                    <img src="{% static 'images/about_placeholder.jpg' %}" alt="About Us" class="intro-image">
+                    <div class="intro-content">
+                        <h3>About Us</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, 
+                        pulvinar facilisis justo mollis, auctor consequat urna.</p>
+                        <a href="{% url 'about' %}" class="btn btn-secondary">Learn More</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Work With Us -->
+            <div class="col-md-6 mb-4">
+                <div class="intro-card">
+                    <img src="{% static 'images/work_placeholder.jpg' %}" alt="Work With Us" class="intro-image">
+                    <div class="intro-content">
+                        <h3>Work With Us</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, 
+                        pulvinar facilisis justo mollis, auctor consequat urna.</p>
+                        <a href="{% url 'work_with_us' %}" class="btn btn-secondary">Get Involved</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Contact -->
+            <div class="col-md-6 mb-4">
+                <div class="intro-card">
+                    <img src="{% static 'images/contact_placeholder.jpg' %}" alt="Contact" class="intro-image">
+                    <div class="intro-content">
+                        <h3>Contact</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, 
+                        pulvinar facilisis justo mollis, auctor consequat urna.</p>
+                        <a href="{% url 'contact' %}" class="btn btn-secondary">Contact Us</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Blog -->
+            <div class="col-md-6 mb-4">
+                <div class="intro-card">
+                    <img src="{% static 'images/blog_placeholder.jpg' %}" alt="Blog" class="intro-image">
+                    <div class="intro-content">
+                        <h3>Blog</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, 
+                        pulvinar facilisis justo mollis, auctor consequat urna.</p>
+                        <a href="{% url 'blog_list' %}" class="btn btn-secondary">Explore Blog</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<!-- Latest Blog Posts -->
+<section id="latest-blog" class="py-5 bg-light">
+    <div class="container">
+        <h2 class="text-center mb-4">Latest Blog Posts</h2>
+        <div class="row">
+            {% for post in latest_posts %}
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <img src="{{ post.thumbnail.url }}" class="card-img-top" alt="{{ post.title }}">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">{{ post.title }}</h5>
+                        <p class="card-text">{{ post.excerpt }}</p>
+                        <a href="{% url 'blog_detail' post.slug %}" class="mt-auto btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <div class="text-center">
+            <a href="{% url 'blog_list' %}" class="btn btn-secondary">View All Posts</a>
+        </div>
     </div>
 </section>
 {% endblock %}
