--- a/celtic_couple_blog/blog/templates/blog/blog_page.html
+++ b/celtic_couple_blog/blog/templates/blog/blog_page.html
@@ -7,6 +7,7 @@
 {% block meta_keywords %}Blog, {{ post.title }}, Celtic, Travel, Heritage{% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/blog.css' %}">
 <section id="blog-detail" class="py-5">
     <div class="container">
         <h1 class="mb-4">{{ post.title }}</h1>
