--- a/celtic_couple_blog/celtic_couple_blog/templates/base.html
+++ b/celtic_couple_blog/celtic_couple_blog/templates/base.html
@@ -57,7 +57,7 @@
                             <a class="nav-link" href="/work-with-us/">Work With Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'blog_list' %}">Blog</a>
+                            <a href="/cms/blog/" class="btn btn-secondary">Blog</a>
                         </li>
                     </ul>
                 </div>
