--- a/celtic_couple_blog/home/templates/home/home_page.html
+++ b/celtic_couple_blog/home/templates/home/home_page.html
@@ -17,7 +17,7 @@
     <div class="container d-flex flex-column justify-content-center align-items-center h-100">
         <h1 class="display-4 text-center">Adventure Awaits</h1>
         <p class="lead">Join us as we explore the world and celebrate our Celtic heritage.</p>
-        <a href="{% url 'blog_list' %}" class="btn btn-primary">Read Our Blog</a>
+        <a href="/cms/blog/" class="btn btn-primary">Read Our Blog</a>
     </div>
 </section>
 
@@ -73,7 +73,7 @@
                         <h3>Blog</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, 
                         pulvinar facilisis justo mollis, auctor consequat urna.</p>
-                        <a href="{% url 'blog_list' %}" class="btn btn-secondary">Explore Blog</a>
+                        <a href="/cms/blog/" class="btn btn-primary">Read Our Blog</a>
                     </div>
                 </div>
             </div>
@@ -94,14 +94,14 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">{{ post.title }}</h5>
                         <p class="card-text">{{ post.excerpt }}</p>
-                        <a href="{% url 'blog_detail' post.slug %}" class="mt-auto btn btn-primary">Read More</a>
+                        <a href="/cms/blog/{{ post.slug }}/" class="mt-auto btn btn-primary">Read More</a> <!-- Updated Link -->
                     </div>
                 </div>
             </div>
             {% endfor %}
         </div>
         <div class="text-center">
-            <a href="{% url 'blog_list' %}" class="btn btn-secondary">View All Posts</a>
+            <a href="/cms/blog/" class="btn btn-secondary">View All Posts</a> <!-- Updated Link -->
         </div>
     </div>
 </section>
