--- a/celtic_couple_blog/celtic_couple_blog/templates/base.html
+++ b/celtic_couple_blog/celtic_couple_blog/templates/base.html
@@ -40,8 +40,8 @@
 </head>
 <body>
     <!-- Navbar -->
-    <header>
-        <nav class="navbar">
+    <header class=" fixed-top">
+        <nav class="navbar ">
             <div class="container-fluid">
                 <!-- Logo and Title -->
                 <a class="navbar-brand d-flex align-items-center" href="{% url 'home' %}">
@@ -76,7 +76,7 @@
     </header>
 
     <!-- Main Content -->
-    <main class="container my-5">
+    <main class="container pt-5 my-5">
         {% block content %}
         <!-- Page-specific content will be injected here -->
         {% endblock content %}
